RESOLVED FIXED208462
Fix for LayoutTests/accessibility/mac/value-change/value-change-user-info-contenteditable.html in IsolatedTree mode.
https://bugs.webkit.org/show_bug.cgi?id=208462
Summary Fix for LayoutTests/accessibility/mac/value-change/value-change-user-info-con...
Andres Gonzalez
Reported 2020-03-02 12:29:43 PST
Fix for LayoutTests/accessibility/mac/value-change/value-change-user-info-contenteditable.html in IsolatedTree mode.
Attachments
Patch (20.88 KB, patch)
2020-03-02 13:05 PST, Andres Gonzalez
no flags
Patch (21.14 KB, patch)
2020-03-02 18:51 PST, Andres Gonzalez
no flags
Patch (21.11 KB, patch)
2020-03-08 10:48 PDT, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-03-02 13:05:27 PST
Andres Gonzalez
Comment 2 2020-03-02 18:51:02 PST
WebKit Commit Bot
Comment 3 2020-03-02 20:07:47 PST
Comment on attachment 392240 [details] Patch Clearing flags on attachment: 392240 Committed r257760: <https://trac.webkit.org/changeset/257760>
WebKit Commit Bot
Comment 4 2020-03-02 20:07:49 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2020-03-02 20:08:18 PST
Jason Lawrence
Comment 6 2020-03-06 12:40:51 PST
Reverted r257760 for reason: This commit caused flaky crashing on Mac wk2. Committed r258019: <https://trac.webkit.org/changeset/258019>
Simon Fraser (smfr)
Comment 7 2020-03-07 10:21:28 PST
Andres Gonzalez
Comment 8 2020-03-08 10:48:57 PDT
Andres Gonzalez
Comment 9 2020-03-08 10:55:23 PDT
The cause of test failures is not directly related to this patch and is addressed with a new patch for bug: https://bugs.webkit.org/show_bug.cgi?id=208648 Re-applying this patch.
WebKit Commit Bot
Comment 10 2020-03-08 12:08:17 PDT
Comment on attachment 392959 [details] Patch Clearing flags on attachment: 392959 Committed r258108: <https://trac.webkit.org/changeset/258108>
WebKit Commit Bot
Comment 11 2020-03-08 12:08:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.